test with real site

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -15,8 +15,7 @@
 		border-radius:		5px,
 		border-width:		2px,
 		element-height:		2.75em,
-		element-margin:		2.25em,
-		container-width:	45em
+		element-margin:		2.25em
 	);
 
 // Font.
